[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rootcause"
version = "0.1.0"
description = "AI-powered root cause analysis for failing tests and errors"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["debugging", "testing", "ai", "developer-tools", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "anthropic>=0.25",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pytest-mock"]

[project.scripts]
rootcause = "rootcause.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/fixtures"

[project.urls]
Homepage = "https://github.com/UA9-TA/rootcause"
Repository = "https://github.com/UA9-TA/rootcause"
Issues = "https://github.com/UA9-TA/rootcause/issues"
